# acdh-xml-validator

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml
data/editions/: L00001.xml
schemata/: schematron.sch
src/acdh_xml_validator/: __init__.py  cli.py
test/schemata/: tillich-briefe.rng
test/xmls/: L00003.xml  L00107.xml
