[project]
name = "acdh-xml-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "csae8092", email = "p.andorfer@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
